--- a/pages/orders.html
+++ b/pages/orders.html
@@ -23,7 +23,7 @@
             <a href="/about.html">About</a>
         </li>
     </ul>
-    <h1>Orders</h1>
+    <h1>Orders vagy valami</h1>
 </body>
 
 </html>
